Update Shell sort